--- a/for her.html
+++ b/for her.html
@@ -6,15 +6,12 @@
     <title>FOR HER</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><h3 id="headingher">one for her</h3>
-    <P id="her">aaj thoda pyaar jta dun kya, <br> 
-    tum mere ho sbko bta dun kya, <br>
-tumhein ik baar dekhun haaye mein jaan gava dun kya, <br>
-mera kamra bahut udaas sa hai, <br>
-teri ik tasveer lga dun kya, <br>
-tujhe sochne mein din chle gye, <br>
-tujhe likhne mein raat bita dun kya!!</P>
-<p id="written">for her</p>
+<body><h3 id="headingher">my mother</h3>
+    <P id="her">
+        you are my everything... <br>
+        maa ji.
+        
+<p id="written">for maa ji</p>
 <a href="index.html"><button id="herlink">back to home</button></a>
 </body>
 </html>
