--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <hr>
     <br>
     
-    <a href="https://www.instagram.com/devu._.315/#"> <button> on a image to open instagram ID</button><img src="insta.png" height="250" alt="darsh"/></a>
+    <a href="https://www.instagram.com/devu._.315/#"> <button> click on a image to open instagram ID</button><img src="insta.png" height="250" alt="darsh"/></a>
  <br>   
  <hr>
  
